fixed overlapping delete button for alc value

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -278,7 +278,8 @@ label[for='toggle-all'] {
 	transition: color 0.4s;
 }
 #beer-list li .alc {
-  float: right;
+  position: absolute;
+  right: 30px;
 }
 
 #beer-list li .alc:after {
